[project]
name = "archipellabs-runtime"
dynamic = ["version"]
description = "An async Redis runtime for load simulation and orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Loïc Veyssière", email = "loic.veyssiere@archipellabs.com" }]
keywords = ["redis", "asyncio", "streams", "load-testing", "orchestration", "task-queue"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "redis>=5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "fakeredis>=2.21",
    "mypy>=1.8",
]
playwright = [
    "playwright>=1.40",
]

[project.urls]
Homepage = "https://archipellabs.com"
Repository = "https://github.com/archipellabs/runtime"
Issues = "https://github.com/archipellabs/runtime/issues"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "runtime._version.__version__" }

[tool.setuptools.packages.find]
include = ["runtime*"]

[tool.setuptools.package-data]
runtime = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30

[tool.mypy]
python_version = "3.11"
files = ["runtime"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
